[SR-7015] Fix CoreFoundation conditional downcast diagnostic message